# rub_usd_bot

./: .gitignore  alembic.ini  config.py  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 17da3f0b2f15_.py
db/: language.sql
